# loom-analytics

./: .gitignore  Loom_Project_Organization_Sample.md  Makefile  README.md  config.example.yaml  render.yaml  requirements.txt  setup.cfg  streamlit_app.py
docs/: stress-test-checklist.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: DashboardBuilder.tsx  InsightReview.tsx  LoadingOverlay.tsx  RunSummary.tsx  TemplateConfirmation.tsx  UploadHero.tsx
frontend/src/lib/: dashboard.ts
scripts/: dev.sh  healthcheck.sh  smoke_prod.py  triage_csvs.py
src/pipeline/: __init__.py  run.py
src/pipeline/analysis/: analysis.py
src/pipeline/api/: __init__.py  app.py
src/pipeline/business/: __init__.py  ecommerce_dashboard.py  financial_dashboard.py  healthcare_dashboard.py  hr_dashboard.py  marketing_dashboard.py  router.py  survey_dashboard.py  web_analytics_dashboard.py
src/pipeline/cleaning/: __init__.py  cleaning.py
src/pipeline/common/: config.py  contracts.py  logging_utils.py  reporting.py
tests/: template_generators.py  test_api.py  test_business_dashboard.py  test_pipeline.py  test_stress_matrix.py  test_template_contracts.py  test_ui_helpers.py
tests/fixtures/: duplicates.csv  empty.csv  missing_values.csv  normal.csv  outliers.csv  single_column.csv  template_manifest.json
(+47 files in other folders)
